--- a/MakeFile
+++ b/MakeFile
@@ -16,6 +16,7 @@ OBJ=$(SRC:.c=.o)
 # 'all' target builds the target executable
 all: $(TARGET)
 
+# Rule to build the target executable
 $(TARGET): $(OBJ)
 	$(CC) $(CFLAGS) -o $(TARGET) $(OBJ)
 
@@ -23,5 +24,3 @@ $(TARGET): $(OBJ)
 clean:
 	rm -f $(TARGET) $(OBJ)
 
-# Phony targets are not files
-.PHONY: all clean
